src/src/calculatorParser.java
// $ANTLR 3.4 src\\calculator.g 2015-06-30 13:49:11

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class calculatorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ID", "INT", "WS", "'!'", "'!='", "'#include'", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'.'", "'/'", "'/='", "':'", "';'", "'<'", "'<<'", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'['", "']'", "'^'", "'^='", "'break'", "'case'", "'char'", "'char*'", "'cin'", "'cout'", "'default'", "'double'", "'double*'", "'else'", "'endl'", "'for'", "'if'", "'int&'", "'int'", "'int*'", "'namespace'", "'return'", "'string'", "'switch'", "'using'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ID=6;
    public static final int INT=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public calculatorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public calculatorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return calculatorParser.tokenNames; }
    public String getGrammarFileName() { return "src\\calculator.g"; }



    // $ANTLR start "program"
    // src\\calculator.g:3:1: program : statements[0] ;
    public final void program() throws RecognitionException {
        String statements1 =null;


        try {
            // src\\calculator.g:4:2: ( statements[0] )
            // src\\calculator.g:4:4: statements[0]
            {
            pushFollow(FOLLOW_statements_in_program11);
            statements1=statements(0);

            state._fsp--;


            System.out.println(statements1);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "statements"
    // src\\calculator.g:8:1: statements[int tab] returns [String value] : ( statement[$tab] a= statements[$tab] |);
    public final String statements(int tab) throws RecognitionException {
        String value = null;


        String a =null;

        String statement2 =null;



        	value = null;

        try {
            // src\\calculator.g:12:2: ( statement[$tab] a= statements[$tab] |)
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==COMMENT||LA1_0==11||(LA1_0 >= 47 && LA1_0 <= 48)||(LA1_0 >= 52 && LA1_0 <= 53)||(LA1_0 >= 58 && LA1_0 <= 60)||LA1_0==63||(LA1_0 >= 65 && LA1_0 <= 66)) ) {
                alt1=1;
            }
            else if ( (LA1_0==EOF) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // src\\calculator.g:12:5: statement[$tab] a= statements[$tab]
                    {
                    pushFollow(FOLLOW_statement_in_statements38);
                    statement2=statement(tab);

                    state._fsp--;


                    pushFollow(FOLLOW_statements_in_statements43);
                    a=statements(tab);

                    state._fsp--;


                    value = statement2 + a;

                    }
                    break;
                case 2 :
                    // src\\calculator.g:14:4: 
                    {
                    value = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "statements"



    // $ANTLR start "statement"
    // src\\calculator.g:17:1: statement[int tab] returns [String value] : ( type[$tab] func_or_var[$tab] | '#include' '<' ID '>' | 'using' 'namespace' ID ';' | COMMENT );
    public final String statement(int tab) throws RecognitionException {
        String value = null;


        Token COMMENT4=null;
        String func_or_var3 =null;



        	value = null;

        try {
            // src\\calculator.g:21:2: ( type[$tab] func_or_var[$tab] | '#include' '<' ID '>' | 'using' 'namespace' ID ';' | COMMENT )
            int alt2=4;
            switch ( input.LA(1) ) {
            case 47:
            case 48:
            case 52:
            case 53:
            case 58:
            case 59:
            case 60:
            case 63:
            case 66:
                {
                alt2=1;
                }
                break;
            case 11:
                {
                alt2=2;
                }
                break;
            case 65:
                {
                alt2=3;
                }
                break;
            case COMMENT:
                {
                alt2=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // src\\calculator.g:21:4: type[$tab] func_or_var[$tab]
                    {
                    pushFollow(FOLLOW_type_in_statement75);
                    type(tab);

                    state._fsp--;


                    pushFollow(FOLLOW_func_or_var_in_statement78);
                    func_or_var3=func_or_var(tab);

                    state._fsp--;


                    value = func_or_var3 + "\n";

                    }
                    break;
                case 2 :
                    // src\\calculator.g:23:4: '#include' '<' ID '>'
                    {
                    match(input,11,FOLLOW_11_in_statement88); 

                    match(input,33,FOLLOW_33_in_statement90); 

                    match(input,ID,FOLLOW_ID_in_statement92); 

                    match(input,38,FOLLOW_38_in_statement94); 

                    value = "";

                    }
                    break;
                case 3 :
                    // src\\calculator.g:25:4: 'using' 'namespace' ID ';'
                    {
                    match(input,65,FOLLOW_65_in_statement103); 

                    match(input,61,FOLLOW_61_in_statement105); 

                    match(input,ID,FOLLOW_ID_in_statement107); 

                    match(input,32,FOLLOW_32_in_statement109); 

                    value = "";

                    }
                    break;
                case 4 :
                    // src\\calculator.g:27:4: COMMENT
                    {
                    COMMENT4=(Token)match(input,COMMENT,FOLLOW_COMMENT_in_statement118); 

                    value = ""; for(int i = 0; i < tab; i++) value += "\t"; value += (COMMENT4!=null?COMMENT4.getText():null);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "statement"



    // $ANTLR start "func_or_var"
    // src\\calculator.g:31:1: func_or_var[int tab] returns [String value] : ( dec_func[$tab] | dec_var[$tab] );
    public final String func_or_var(int tab) throws RecognitionException {
        String value = null;


        String dec_func5 =null;

        String dec_var6 =null;



        	value = null;

        try {
            // src\\calculator.g:35:2: ( dec_func[$tab] | dec_var[$tab] )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==17) ) {
                    alt3=1;
                }
                else if ( (LA3_1==24||LA3_1==32||LA3_1==36||LA3_1==41) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // src\\calculator.g:35:4: dec_func[$tab]
                    {
                    pushFollow(FOLLOW_dec_func_in_func_or_var143);
                    dec_func5=dec_func(tab);

                    state._fsp--;


                    value = ""; for(int i = 0; i < tab; i++) value += "\t";
                    		 value += "function " + dec_func5;

                    }
                    break;
                case 2 :
                    // src\\calculator.g:38:4: dec_var[$tab]
                    {
                    pushFollow(FOLLOW_dec_var_in_func_or_var153);
                    dec_var6=dec_var(tab);

                    state._fsp--;


                    value = ""; for(int i = 0; i < tab; i++) value += "\t";
                    		 value += "var " + dec_var6;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "func_or_var"



    // $ANTLR start "dec_func"
    // src\\calculator.g:43:1: dec_func[int tab] returns [String value] : dec_func_name[$tab] '{' func_implement[$tab + 1] '}' semi_colon[$tab] ;
    public final String dec_func(int tab) throws RecognitionException {
        String value = null;


        String dec_func_name7 =null;

        String func_implement8 =null;

        String semi_colon9 =null;



        	value = null;

        try {
            // src\\calculator.g:47:2: ( dec_func_name[$tab] '{' func_implement[$tab + 1] '}' semi_colon[$tab] )
            // src\\calculator.g:47:4: dec_func_name[$tab] '{' func_implement[$tab + 1] '}' semi_colon[$tab]
            {
            pushFollow(FOLLOW_dec_func_name_in_dec_func179);
            dec_func_name7=dec_func_name(tab);

            state._fsp--;


            match(input,68,FOLLOW_68_in_dec_func182); 

            pushFollow(FOLLOW_func_implement_in_dec_func184);
            func_implement8=func_implement(tab + 1);

            state._fsp--;


            match(input,70,FOLLOW_70_in_dec_func187); 

            pushFollow(FOLLOW_semi_colon_in_dec_func189);
            semi_colon9=semi_colon(tab);

            state._fsp--;


            value = dec_func_name7 + "\n";
            		 for(int i = 0; i < tab; i++) value += "\t";
            		 value += "{\n" + func_implement8;
            		 for(int i = 0; i < tab; i++) value += "\t";
            		 value += "}" + semi_colon9 + "\n";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "dec_func"



    // $ANTLR start "dec_func_name"
    // src\\calculator.g:55:1: dec_func_name[int tab] returns [String value] : ID '(' dec_param[$tab] ')' ;
    public final String dec_func_name(int tab) throws RecognitionException {
        String value = null;


        Token ID10=null;
        String dec_param11 =null;



        	value = null;

        try {
            // src\\calculator.g:59:2: ( ID '(' dec_param[$tab] ')' )
            // src\\calculator.g:59:4: ID '(' dec_param[$tab] ')'
            {
            ID10=(Token)match(input,ID,FOLLOW_ID_in_dec_func_name215); 

            match(input,17,FOLLOW_17_in_dec_func_name217); 

            pushFollow(FOLLOW_dec_param_in_dec_func_name219);
            dec_param11=dec_param(tab);

            state._fsp--;


            match(input,18,FOLLOW_18_in_dec_func_name222); 

            value = (ID10!=null?ID10.getText():null) + "(" + dec_param11 + ")";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "dec_func_name"



    // $ANTLR start "dec_param"
    // src\\calculator.g:63:1: dec_param[int tab] returns [String value] : ( type[$tab] ID dec_param_[$tab] |);
    public final String dec_param(int tab) throws RecognitionException {
        String value = null;


        Token ID12=null;
        String dec_param_13 =null;



        	value = null;

        try {
            // src\\calculator.g:67:2: ( type[$tab] ID dec_param_[$tab] |)
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0 >= 47 && LA4_0 <= 48)||(LA4_0 >= 52 && LA4_0 <= 53)||(LA4_0 >= 58 && LA4_0 <= 60)||LA4_0==63||LA4_0==66) ) {
                alt4=1;
            }
            else if ( (LA4_0==18) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // src\\calculator.g:67:4: type[$tab] ID dec_param_[$tab]
                    {
                    pushFollow(FOLLOW_type_in_dec_param247);
                    type(tab);

                    state._fsp--;


                    ID12=(Token)match(input,ID,FOLLOW_ID_in_dec_param250); 

                    pushFollow(FOLLOW_dec_param__in_dec_param252);
                    dec_param_13=dec_param_(tab);

                    state._fsp--;


                    value = (ID12!=null?ID12.getText():null) + dec_param_13;

                    }
                    break;
                case 2 :
                    // src\\calculator.g:69:4: 
                    {
                    value = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "dec_param"



    // $ANTLR start "dec_param_"
    // src\\calculator.g:72:1: dec_param_[int tab] returns [String value] : ( ',' dec_param[$tab] |);
    public final String dec_param_(int tab) throws RecognitionException {
        String value = null;


        String dec_param14 =null;



        	value = null;

        try {
            // src\\calculator.g:76:2: ( ',' dec_param[$tab] |)
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==24) ) {
                alt5=1;
            }
            else if ( (LA5_0==18) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // src\\calculator.g:76:4: ',' dec_param[$tab]
                    {
                    match(input,24,FOLLOW_24_in_dec_param_283); 

                    pushFollow(FOLLOW_dec_param_in_dec_param_286);
                    dec_param14=dec_param(tab);

                    state._fsp--;


                    value = ", " + dec_param14;

                    }
                    break;
                case 2 :
                    // src\\calculator.g:78:4: 
                    {
                    value = "";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "dec_param_"



    // $ANTLR start "func_implement"
    // src\\calculator.g:81:1: func_implement[int tab] returns [String value] : block[$tab] ;
    public final String func_implement(int tab) throws RecognitionException {
        String value = null;


        String block15 =null;



        	value = null;

        try {
            // src\\calculator.g:85:2: ( block[$tab] )
            // src\\calculator.g:85:4: block[$tab]
            {
            pushFollow(FOLLOW_block_in_func_implement317);
            block15=block(tab);

            state._fsp--;


            value = block15;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "func_implement"



    // $ANTLR start "dec_var"
    // src\\calculator.g:89:1: dec_var[int tab] returns [String value] : ( ID dec_array[$tab] ';' | ID dec_array[$tab] '=' array_value[$tab] ';' | ID dec_expression[$tab] dec_var_[$tab] );
    public final String dec_var(int tab) throws RecognitionException {
        String value = null;


        Token ID16=null;
        Token ID18=null;
        Token ID20=null;
        String dec_array17 =null;

        String array_value19 =null;

        String dec_expression21 =null;

        String dec_var_22 =null;



        	value = null;

        try {
            // src\\calculator.g:93:2: ( ID dec_array[$tab] ';' | ID dec_array[$tab] '=' array_value[$tab] ';' | ID dec_expression[$tab] dec_var_[$tab] )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==41) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==INT) ) {
                        int LA6_4 = input.LA(4);

                        if ( (LA6_4==42) ) {
                            int LA6_5 = input.LA(5);

                            if ( (LA6_5==32) ) {
                                alt6=1;
                            }
                            else if ( (LA6_5==36) ) {
                                alt6=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 6, 5, input);

                                throw nvae;

                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 4, input);

                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        throw nvae;

                    }
                }
                else if ( (LA6_1==24||LA6_1==32||LA6_1==36) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // src\\calculator.g:93:4: ID dec_array[$tab] ';'
                    {
                    ID16=(Token)match(input,ID,FOLLOW_ID_in_dec_var344); 

                    pushFollow(FOLLOW_dec_array_in_dec_var346);
                    dec_array17=dec_array(tab);

                    state._fsp--;


                    match(input,32,FOLLOW_32_in_dec_var349); 

                    value = (ID16!=null?ID16.getText():null) + " = new Array(" + dec_array17 + ");";
